
(293) Improve autoconf magic: To detect headers like GL/gl.h, it might be
necessary to temporarily use the X11 flags found by AC_PATH_XTRA.

(294) Fixed the GLUT_CURSOR_INHERIT logic once again...

(295) Synched the DLL definitions with reality.

**************************************************************************
* Changes on August 31, 2005.
**************************************************************************

(296) Added support for Open Watcom

**************************************************************************
* Changes on September 4, 2005.
**************************************************************************

(297) Silenced autogen.sh. *nix commands are silent by default.

(298) Use -Wall for automake to catch some buglets, deprecated
stuff, etc.

(299) Use target-specific *_CPPFLAGS, not the deprecated INCLUDES.

**************************************************************************
* Changes on October 6, 2005.
**************************************************************************

(300) Implemented Stereo in Windows.

(301) Allowed compilation of Windows version by removing DLL decorations
from deprecated joystick interface extensions.

**************************************************************************
* Changes on October 12, 2005.
**************************************************************************

(302) Simply use autoreconf in autogen.sh, it is much simpler and the
recommended way in the autotools documentation. Removed INSTALL,
install-sh and mkinstalldirs, they are either unused or automatically
generated by autogen.sh.

(303) Moved GLUT_INIT_STATE to <GL/freeglut_ext.h>, it is not part of the
original GLUT.

**************************************************************************
* Changes on August 05, 2006.
**************************************************************************

(304) Updated build requirements for SuSE 10.1.

(305) Check fgets for return value to avoid warnings.